--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,17 +1,20 @@
-name: "ocean_interior_acidification"
+name: ocean_interior_acidification
 output_dir: ../docs
 navbar:
-  title: "ocean_interior_acidification"
+  title: OIA
   left:
   - text: Home
     href: index.html
-  - text: About
-    href: about.html
-  - text: License
-    href: license.html
+  right:
+  - icon: fab fa-github
+    text: Source code
+    href: https://github.com/jens-daniel-mueller/ocean_interior_acidification
 output:
   workflowr::wflow_html:
     toc: yes
-    toc_float: yes
-    theme: cosmo
+    toc_float:
+      collapsed: no
+    toc_depth: 3
+    theme: flatly
+    code_folding: hide
     highlight: textmate
